# Fast-Robust-ICP

./: CMakeLists.txt  kitti.cpp  kitti_test.bash  tartan.cpp  tartan_test.bash  tum.cpp  tum_test.bash
